spacing fixed for home page

--- a/css/home.css
+++ b/css/home.css
@@ -178,10 +178,6 @@
 
 /* ========== Group 1 ========= */
 
-#home #group-1 {
-    margin-bottom: 60px;
-}
-
 #home #group-1 .main {
     margin-top: 32px;
 }
@@ -200,11 +196,6 @@
 }
 
 /* ========== Group 2 ========= */
-
-#home #group-2 {
-    margin-bottom: 120px;
-}
-
 #home #group-2 .main {
     margin-top: 24px;
 }
@@ -223,10 +214,6 @@
 }
 
 /* ========== Clients ========= */
-#home #client {
-    margin-bottom: 120px;
-}
-
 #home #client .title {
     font-size: 38px;
     font-weight: 600;
@@ -293,11 +280,6 @@
     margin-bottom: 32px;
 }
 
-#home  #service-1 {
-    margin-bottom: 60px;
-}
-
-
 #home  #service-1 .main {
     margin-top: 32px;
 }
@@ -316,10 +298,6 @@
 }
 
 /* ========== Service 2 ========= */
-
-#home  #service-2 {
-    margin-bottom: 60px;
-}
 
 #home  #service-2 .main {
     margin-top: 24px;
@@ -340,11 +318,6 @@
 
 /* ========== Service 3 ========= */
 
-#home  #service-3 {
-    margin-bottom: 60px;
-}
-
-
 #home  #service-3 .main {
     margin-top: 24px;
 }
@@ -363,10 +336,6 @@
 }
 
 /* ========== Service 4 ========= */
-
-#home  #service-4 {
-    margin-bottom: 120px;
-}
 
 #home  #service-4 .main {
     margin-top: 24px;
@@ -389,7 +358,7 @@
 /* ======= Footer =========== */
 #home .contact-us {
     max-width: 1440px;
-    padding: 24px;
+    padding: 32px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
