--- a/css/index.css
+++ b/css/index.css
@@ -29,6 +29,15 @@ body {
     position: relative;
 }
 
+@media (max-width: 740px) {
+    .container {
+        padding: 0 16px;
+    }
+    .title {
+        width: fit-content;
+    }
+}
+
 button {
     border: 1px solid transparent;;
     background: var(--primary-font-color);
@@ -65,6 +74,8 @@ button:hover {
     position: relative;
 }
 
+/* ==========  Text gradients ============= */
+
 .gradient-text {
     background: linear-gradient(63deg,#11adbd 0%,#0020d8 100%);
     -webkit-background-clip: text;
@@ -79,15 +90,34 @@ button:hover {
     width: max-content;
 }
 
+
+/* ==========  Section ============= */
+.section {
+    padding: 60px 0;
+}
+.inner-section {
+    margin-bottom: 32px;
+}
+
 @media (max-width: 740px) {
-    .container {
-        padding: 0 16px;
+    .section {
+        padding: 48px 0;
     }
-    .title {
-        width: fit-content;
+    .inner-section {
+        margin-bottom: 24px;
     }
 }
 
+@media (max-width: 360px) {
+    .section {
+        padding: 32px 0;
+    }
+    .inner-section {
+        margin-bottom: 20px;
+    }
+}
+
+/* ==========  Section Title and Desc ============= */
 
 .head {
     text-align: center;
@@ -104,7 +134,6 @@ button:hover {
 }
 
 
-/* ========== Common ============= */
 @media (max-width: 1040px) {
     .head .title {
         font-size: 32px !important;
